--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "crypto": "^1.0.1",
     "crypto-js": "^4.2.0",
     "dotenv": "^16.5.0",
-    "express": "^5.1.0",
+    "ejs": "^3.1.10",
+    "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.14.1",
+    "multer": "^1.4.5-lts.2",
     "mysql2": "^3.14.1",
     "nodemailer": "^7.0.2",
     "uuid": "^11.1.0"
